--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -51,8 +51,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          # Upload entire repository
-          path: '.'
+          path: release/wwwroot
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
